# agentic-qa-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
mocks/: jira_story.json  schema_api.json  tools_registry.json
scripts/: fetch_data.py
src/: validator.py
src/qa_agentic/: agents.py  app.py  graph.py  hitl.py  init.py  profiler.py  report.py  run.py  safety.py  tools.py  validator.py
